Atualizar Swagger
