# app/Http/Controllers/Controller.php
@@ -11,13 +11,9 @@ use Illuminate\Routing\Controller as BaseController;
  * @OA\Info(
  *      version="1.0.0",
  *      title="API Liberfly",
- *      description="",
+ *      description="API de criação e consulta de produtos",
  *      @OA\Contact(
  *          email="caiquedaniel8@gmail.com"
- *      ),
- *      @OA\License(
- *          name="Apache 2.0",
- *          url="http://www.apache.org/licenses/LICENSE-2.0.html"
  *      )
  * )
  *
